# sms-simulation

./: README.md  pyproject.toml  sms_config.toml  tasks.py
src/sms/: __init__.py  cli.py  config.py  messages.py  producer.py  sender.py  simulator.py
tests/: test_cli.py  test_messages.py  test_producer.py  test_sender.py  test_simulator.py
