[tool.poetry]
name = "sms-simulation"
version = "0.2.0"
description = "Simulate SMS messages"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sms", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
tomli = "^2.0.1"

[tool.poetry.scripts]
sms = "sms.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = {extras = ["toml"], version = "^7.2.5"}
pytest-cov = "^4.0.0"
black = "^23.3.0"
mypy = "^1.3.0"
invoke = "^2.1.1"
pyflakes = "^3.0.1"
pylint = "^2.17.4"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
